fix: fixed layout errors and added a viewer collapse on small window size

--- a/src/renderer/static/scss/leftBlock/changesArea.scss
+++ b/src/renderer/static/scss/leftBlock/changesArea.scss
@@ -8,7 +8,8 @@ div.changes-area {
     width: 250px;
     margin: 1px;
     margin-left: 1px;
-    height: calc(100vh - 250px);
+    // ? height is set as viewport - commit box base size - mysterious offset
+    height: calc(100vh - 250px - 21px);
     background-color: #fff;
     padding: 20px;
     padding-bottom: 5px;
