--- a/src/renderer/static/scss/leftBlock/commitBox.scss
+++ b/src/renderer/static/scss/leftBlock/commitBox.scss
@@ -28,13 +28,13 @@ div.spinner-commit-box {
 }
 
 div.commit-overlay{
+    // ? Height is unset and given by their children.
     width: 250px;
     margin-left: 1px;
     background-color: rgba(255, 255, 255, 0.5);
     border-radius: 5px;
     padding: 20px;
     padding-bottom: 0;
-    height: 250px;
     z-index: -1;
 }
 
@@ -45,7 +45,6 @@ div.commit-box {
     padding: 20px;
     margin: -20px;
     position: relative;
-    height: 250px;
     z-index: 9;
 
     & p {
@@ -109,7 +108,8 @@ div.commit-box {
         padding: 5px;
         font-size: 1em;
         font-weight: 100;
-        font-family: "Roboto Condensed"
+        font-family: "Roboto Condensed";
+        height: 100px;
     }
 
     & .commit-label {
